--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/cf25827660.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body id="start">
     <main>
         <section id="intro">
             <article class="title">
@@ -117,7 +117,7 @@
     </main>
     <footer>
         <ul>
-            <li><a href="#intro">START</a></li>
+            <li><a href="#start">START</a></li>
             <li><a href="#about_me">ÜBER MICH</a></li>
             <li><a href="#skills">MEINE SKILLS</a></li>
             <li><a href="#gallery">FOTOGALERIE</a></li>
